change server name to server-msi-jefri

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -15,7 +15,7 @@ env:
 jobs:
   app-deploy:
     name: 🚚 Build App...
-    runs-on: server-cloufina-l1-ai
+    runs-on: server-msi-jefri
     steps:
       - name: Set Time Zone, Get start datetime & Template Top
         run: |
