--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -4,7 +4,7 @@ name: 🚀 Deploy App...
 on:
   # Triggers the workflow on push or pull request events but only for the "development" branch
   push:
-    branches: ["master"] # master, development, staging
+    branches: ["main"] # master, development, staging
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
