--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,11 +2,16 @@ version: '3.8'
 
 services:
   fastapi:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
     ports:
       - "8000:8000"
     volumes:
       - .:/app  # Ini akan menghubungkan direktori proyek ke dalam container
     environment:
       - ENV=development  # Anda bisa menambahkan variabel lingkungan lain jika diperlukan
-
+    network_mode: bridge
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
